syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/kefniark/mango/example/codegen/api";

service Users {
    // Create or Update User
    rpc set(UserSetRequest) returns (UserData) {}
    
    // Delete a User
    rpc delete(UserGetRequest) returns (google.protobuf.Empty) {}
    
    // Get a User by Id
    rpc get(UserGetRequest) returns (UserData) {}

    // List multiple Users (filter, paginate)
    rpc search(UserSearchRequest) returns (UserSearchResponse) {}
}

message UserData {
    string id = 1;
    string name = 2;
    string bio = 3;
}

message UserSetRequest {
    optional string id = 1;
    string name = 2;
    string bio = 3;
}

message UserGetRequest {
    string id = 1;
}

message UserSearchRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message UserSearchResponse {
    repeated UserData users = 1;
    int64 total = 2;
}
